templates/netchecks_template.yaml
---
# Source: netchecks/templates/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-netchecks
  labels:
    helm.sh/chart: netchecks-0.1.16
    app.kubernetes.io/name: netchecks
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.5.3"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: netchecks
      app.kubernetes.io/instance: release-name
  policyTypes:
    - Egress

  egress:
    # Allow operator to talk to anything. Would be better to restrict to K8s API
    - {}
---
# Source: netchecks/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-netchecks
  labels:
    helm.sh/chart: netchecks-0.1.16
    app.kubernetes.io/name: netchecks
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.5.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: netchecks
    app.kubernetes.io/instance: release-name
---
# Source: netchecks/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-netchecks
  labels:
    helm.sh/chart: netchecks-0.1.16
    app.kubernetes.io/name: netchecks
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.5.3"
    app.kubernetes.io/managed-by: Helm
spec:
  # Please note that only one replica is required for the operator
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: netchecks
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: netchecks
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: netcheck-operator
      securityContext:
        {}
      containers:
        - name: netchecks
          securityContext:
            {}
          image: "ghcr.io/hardbyte/netchecks-operator:0.5.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 60
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          resources:
            {}
          volumeMounts:
            - mountPath: /var/config
              name: config-file
              readOnly: true
      volumes:
        - name: config-file
          configMap:
            name: release-name-netchecks
